<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="timetracker.com.timetracker.DialegActivitys.CreateReportActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initDate"
            android:textSize="20dp"
            android:layout_column="0"
            android:layout_row="0"

            />
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/initDate"
            android:textSize="20dp"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onInitDate"
            android:text="Click to add Date"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalDate"

            android:textSize="20dp"
            android:layout_column="0"
            android:layout_row="1"

            />
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/finalDate"
            android:textSize="20dp"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="onFinalDate"
            android:text="Click to add Date"
            />

    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Init Hour:"
            android:textSize="20dp"
            android:layout_column="0"
            android:layout_row="0"

            />
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/initHour"
            android:textSize="20dp"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onInitHour"
            android:text="Click to add Hour"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Final Hour:"

            android:textSize="20dp"
            android:layout_column="0"
            android:layout_row="1"

            />
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/finalHour"
            android:textSize="20dp"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="onFinalHour"
            android:text="Click to add Hour"
            />

    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:columnCount="2">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"
        >

        <TextView
            android:text="@string/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <RadioButton android:id="@+id/summarized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abstractType"
            android:onClick="onTypeClicked"/>
        <RadioButton android:id="@+id/detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailedType"
            android:onClick="onTypeClicked"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_marginLeft="40dp"
        >

        <TextView
            android:text="@string/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <RadioButton android:id="@+id/document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document"
            android:onClick="onFormatClicked"/>
        <RadioButton android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:onClick="onFormatClicked"/>
    </RadioGroup>
    </GridLayout>
    <Button
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createProject"
        android:onClick="onCreateReport" />
</LinearLayout>