<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="timetracker.com.timetracker.FirstActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"

        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"

        android:textSize="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/description"
        android:textSize="20dp"
        />

    <Button
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createProject"
        android:onClick="onCreateProject" />


</LinearLayout>
