<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:orientation="vertical">


    <TextView
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        />

    <TextView
        android:text="asdfasdfasdfasdfasdfad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/description" />

    <TextView
        android:text="@string/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:id="@+id/time" />

    <TextView
        android:text="6h 23min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/duration_abstract"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>
    <TextView
        android:text="@string/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        />

    <TextView
        android:text="INACTIVE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"

        android:textColor="@color/colorPrimary"
        android:id="@+id/active_abstract" />

</LinearLayout>